<resources>
    <string name="app_name">MyNews</string>
    <string name="news_items">newsItems</string>
    <string name="position">position</string>
    <string name="show_more">Show more</string>
    <string name="search">Search</string>
    <string name="sorting">Sorting</string>
    <string name="filter">Filter</string>
    <string name="reset_all">Reset</string>
    <string name="changeView">Change view</string>
    <string name="by_relevancy">By relevancy</string>
    <string name="by_popularity">By popularity</string>
    <string name="by_published_at">By published at</string>
    <string name="today">Today</string>
    <string name="this_week">Week</string>
    <string name="this_month">Month</string>
    <string name="resetFilter">Reset</string>
    <string name="internet_error">Internet error</string>
    <string name="publishedAt">"Date: %1$s"</string>
    <string name="no_content">No content found</string>
    <string name="no_connection_to_server">No connection to server</string>
    <string name="no_internet">No internet</string>
    <string name="no_matching_results">No matching results from database</string>
    <string name="incorrect_credentials">"Username or password is incorrect"</string>
    <string name="user_already_exist">"User already exist"</string>
    <string name="user_successfully_created">"User was successfully created"</string>
    <string name="news_successfully_created">"News was successfully created"</string>
    <string name="news_successfully_deleted">"News was successfully deleted"</string>
    <string name="token_is_expired">"JWT token is expired"</string>
    <string name="sortUnavailable">Sorting is unavailable for the default screen</string>
    <string name="filterUnavailable">Filtering is unavailable for the default screen</string>
    <string name="waiter">waiter</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="world_news">World news</string>
    <string name="user_news">User news</string>
    <string name="add_user_news">Add user news</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_url">Enter url</string>
    <string name="enter_url_to_image">Enter url to image</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="add_news">"Add News"</string>
    <string name="validate_title">"Title cannot be empty"</string>
    <string name="validate_description">"Description cannot be empty"</string>
    <string name="validate_url">"Url cannot be empty"</string>
    <string name="validate_url_to_image">"Url to image cannot be empty"</string>
    <string name="validate_name">"Username cannot be empty"</string>
    <string name="validate_password">"Password cannot be empty"</string>
    <string name="logout">Logout</string>
    <string name="edit_news">Edit News</string>
    <string name="delete_news">Delete News</string>
</resources>