<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/sort"
        android:title="@string/sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/filter"
        android:title="@string/filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/resetAll"
        android:icon="@drawable/reset_all"
        android:title="@string/reset_all"
        app:showAsAction="never" />
</menu>